RESOLVED FIXED187506
REGRESSION (r232416): Flickering when going back to Google search results on back swipe
https://bugs.webkit.org/show_bug.cgi?id=187506
Summary REGRESSION (r232416): Flickering when going back to Google search results on ...
Tim Horton
Reported 2018-07-09 22:27:57 PDT
REGRESSION (r232416): Flickering when going back to Google search results on back swipe
Attachments
Patch (5.96 KB, patch)
2018-07-09 22:28 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-07-09 22:28:37 PDT
Tim Horton
Comment 2 2018-07-09 23:04:41 PDT
WebKit Commit Bot
Comment 3 2018-07-09 23:24:00 PDT
Comment on attachment 344666 [details] Patch Clearing flags on attachment: 344666 Committed r233678: <https://trac.webkit.org/changeset/233678>
WebKit Commit Bot
Comment 4 2018-07-09 23:24:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.